2008-11-22  Yoshinori Tahara  <read.eval.print@gmail.com>

	* Apply Matthew D. Swank's path. Thanks!

