@@ -3,10 +3,20 @@
 (defmethod initialize-instance :after ((unknown unknown) &rest args)
   (declare (ignore args))
   (let ((ptr (ptr unknown))
+        (finalizer (slot-value unknown 'finalizer))
         (class (class-name (class-of unknown))))
     (format t "unknown::alloc ~a~%" ptr)
     (finalize unknown (lambda ()
                         (format t "~a::realease ~a~%" class ptr)
+                        (when finalizer
+                          (free-variant
+                           (apply #'dispatch-invoke ptr
+                                  (if (atom finalizer)
+                                      (list (string finalizer))
+                                      (cons (string (car finalizer))
+                                            (mapcar #'(lambda (x)
+                                                        (ptr (make-variant x)))
+                                                    (cdr finalizer)))))))
                         (unknown-release ptr)))))
 
 (defmethod add-ref ((unknown unknown))
